updating twitch clone styling

--- a/twitch-clone/client/public/manifest.json
+++ b/twitch-clone/client/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "React App",
   "name": "Create React App Sample",
+  "content_security_policy": "script-src 'self' 'sha256-WOdSzz11/3cpqOdrm89LBL2UPwEU9EhbDtMy2OciEhs='",
   "icons": [
     {
       "src": "favicon.ico",
